Project SimpleBank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple Bank Database
  '''
}
Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestampz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestampz [not null, default: `now()`]
}

Table sessions as S {
  id      bigserial [pk]
  username varchar [not null, ref: > U.username]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked varchar [not null, default: false]
  expired_at timestampz [not null]
  created_at timestampz [not null, default: `now()`]
}

// Creating tables
Table accounts as A {
  id bigserial [pk] // auto-increment
  owner varchar [not null, ref: > U.username]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestampz [not null, default: `now()`]

  indexes {
    owner
    (owner, currency) [unique]
  }
}


Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id]
  amount bigint [not null, note: 'can be negative or positive']
  created_at timestampz [not null, default: `now()`]
  indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id]
  to_account_id bigint [ref: > A.id]
  amount bigint [not null, note: 'must be positive']
  created_at timestampz [not null, default: `now()`]
  indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}
